// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[ToastBar Rendering] renders Default without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-fnyeze rcx-toastbar rcx-toastbar--info  rcx-css-n4l2cd"
    >
      <div
        class="rcx-toastbar_inner"
      >
        <i
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-icon--name-info rcx-icon  rcx-toastbar_icon--info rcx-css-4pvxx3"
        >
          
        </i>
        <div
          class="rcx-toastbar_content"
          role="alert"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
  quis nostrud exercitation ullamco
        </div>
      </div>
      <div
        class="rcx-box rcx-box--full rcx-css-h9ngh8 rcx-toastbar_progressbar"
      />
    </div>
  </div>
</body>
`;

exports[`[ToastBar Rendering] renders Error without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-fnyeze rcx-toastbar rcx-toastbar--error  rcx-css-n4l2cd"
    >
      <div
        class="rcx-toastbar_inner"
      >
        <i
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-icon--name-ban rcx-icon  rcx-toastbar_icon--error rcx-css-4pvxx3"
        >
          
        </i>
        <div
          class="rcx-toastbar_content"
          role="alert"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
  quis nostrud exercitation ullamco
        </div>
      </div>
      <div
        class="rcx-box rcx-box--full rcx-css-h9ngh8 rcx-toastbar_progressbar"
      />
    </div>
  </div>
</body>
`;

exports[`[ToastBar Rendering] renders Success without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-fnyeze rcx-toastbar rcx-toastbar--success  rcx-css-n4l2cd"
    >
      <div
        class="rcx-toastbar_inner"
      >
        <i
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-icon--name-circle-check rcx-icon  rcx-toastbar_icon--success rcx-css-4pvxx3"
        >
          
        </i>
        <div
          class="rcx-toastbar_content"
          role="alert"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
  quis nostrud exercitation ullamco
        </div>
      </div>
      <div
        class="rcx-box rcx-box--full rcx-css-h9ngh8 rcx-toastbar_progressbar"
      />
    </div>
  </div>
</body>
`;

exports[`[ToastBar Rendering] renders TinyText without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-fnyeze rcx-toastbar rcx-toastbar--info  rcx-css-n4l2cd"
    >
      <div
        class="rcx-toastbar_inner"
      >
        <i
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-icon--name-info rcx-icon  rcx-toastbar_icon--info rcx-css-4pvxx3"
        >
          
        </i>
        <div
          class="rcx-toastbar_content"
          role="alert"
        >
          Lorem ipsum dolor sit amet
        </div>
      </div>
      <div
        class="rcx-box rcx-box--full rcx-css-h9ngh8 rcx-toastbar_progressbar"
      />
    </div>
  </div>
</body>
`;

exports[`[ToastBar Rendering] renders WithCloseButton without crashing 1`] = `
<body>
  <div>
    <div
      class="rcx-box rcx-box--full rcx-css-fnyeze rcx-toastbar rcx-toastbar--info  rcx-css-n4l2cd"
    >
      <div
        class="rcx-toastbar_inner"
      >
        <i
          aria-hidden="true"
          class="rcx-box rcx-box--full rcx-icon--name-info rcx-icon  rcx-toastbar_icon--info rcx-css-4pvxx3"
        >
          
        </i>
        <div
          class="rcx-toastbar_content"
          role="alert"
        >
          Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
  tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
  quis nostrud exercitation ullamco
        </div>
        <div
          class="rcx-toastbar-close"
        >
          <button
            aria-label="Dismiss alert"
            class="rcx-box rcx-box--full rcx-button--tiny-square rcx-button--square rcx-button--icon rcx-button"
            type="button"
          >
            <i
              aria-hidden="true"
              class="rcx-box rcx-box--full rcx-icon--name-cross rcx-icon rcx-css-1g87xs3"
            >
              
            </i>
          </button>
        </div>
      </div>
      <div
        class="rcx-box rcx-box--full rcx-css-h9ngh8 rcx-toastbar_progressbar"
      />
    </div>
  </div>
</body>
`;
